--- a/fronteds/vercel.json
+++ b/fronteds/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "frontend/package.json",
+      "src": "fronteds/package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "frontend/build"
@@ -12,7 +12,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "frontend/index.html"
+      "dest": "fronteds/index.html"
     }
   ]
 }
