--- a/fronteds/vercel.json
+++ b/fronteds/vercel.json
@@ -5,7 +5,7 @@
       "src": "fronteds/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "frontend/build"
+        "distDir": "fronteds/build"
       }
     }
   ],
