--- a/fronteds/vercel.json
+++ b/fronteds/vercel.json
@@ -2,17 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "/package.json",
+      "src": "fronteds/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "/build"
+        "distDir": "fronteds/build"
       }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "fronteds/index.html"
     }
   ]
 }
